first draft for conversion to Single<HttpResponse<MirrorValue<V>>>